Funcion guarda distancias paralelizada

--- a/TDASeriesdetiempo.ipynb
+++ b/TDASeriesdetiempo.ipynb
@@ -51,36 +51,31 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "_J8Fq6ln8T9J"
+        "id": "_J8Fq6ln8T9J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "42a7abf5-6770-4775-9b9b-13a94d861032"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!python -m pip install -U giotto-tda-nightly\n",
-        "!\n",
-        "!pip install -U https://github.com/PythonOT/POT/archive/master.zip # with --user for user install (no root)\n",
-        "#!pip install POT\n",
-        "#!pip install pymanopt autograd"
+        "# Funcion paralelizada"
       ],
       "metadata": {
-        "id": "d4mKa_bz8Hrf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install gudhi "
-      ],
-      "metadata": {
-        "id": "h_GfO65eKMW0"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "dd52qoWZ10z8"
+      }
     },
     {
       "cell_type": "code",
@@ -89,20 +84,176 @@
         "import numpy as np\n",
         "from gtda.time_series import TakensEmbedding, SlidingWindow\n",
         "from gtda.homology import VietorisRipsPersistence\n",
-        "from sklearn.model_selection import train_test_split\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn import set_config\n",
-        "from gtda.time_series import Labeller\n",
-        "set_config(display='diagram')  \n",
-        "from gtda.diagrams import PersistenceEntropy,PersistenceLandscape,BettiCurve\n",
-        "from gtda.plotting import plot_diagram\n",
-        "#Red Convolucional \n",
+        " from gtda.diagrams import PersistenceEntropy,PersistenceLandscape,BettiCurve\n",
         "from gudhi.wasserstein import wasserstein_distance\n",
         "import gudhi\n",
-        "import ot"
+        "import ot\n",
+        "import multiprocessing\n",
+        "from functools import partial\n"
       ],
       "metadata": {
         "id": "4CRKlJjhJeZr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcular_distancia_wasserstein(a, c, d, diagrams, i):\n",
+        "    return wasserstein_distance1(diagrams[a], diagrams[i])\n",
+        "\n",
+        "def Guarda_distancias(a, c, d):\n",
+        "    \"\"\"\n",
+        "    Guarda las distancias de wassertein en una lista \n",
+        "    recibe a que es la coleccion 1 \n",
+        "    Parametros: (a,b) -> rango del conjunto [1] , (c,d)-> rango del conjunto [2] \n",
+        "  \n",
+        "    Retorna:\n",
+        "    Una lista con las distancias de wassertein \n",
+        "    \"\"\"\n",
+        "    distancias = []\n",
+        "    # Crear un grupo de procesos\n",
+        "    pool = multiprocessing.Pool()\n",
+        "    # Crear una función parcial con los parámetros a, c y d fijados\n",
+        "    calcular_distancia_partial = partial(calcular_distancia_wasserstein, a, c, d, diagrams)\n",
+        "    # Calcular las distancias de forma paralela\n",
+        "    distancias = pool.map(calcular_distancia_partial, range(c, d))\n",
+        "    # Cerrar el grupo de procesos\n",
+        "    pool.close()\n",
+        "    # Esperar a que todos los procesos terminen\n",
+        "    pool.join()\n",
+        "    return distancias\n"
+      ],
+      "metadata": {
+        "id": "9fai37Vr2IvZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import multiprocessing\n",
+        "from functools import partial\n",
+        "\n",
+        "def calcular_distancia_wasserstein(a, c, d, diagrams, i):\n",
+        "    return wasserstein_distance1(diagrams[a], diagrams[i])\n",
+        "\n",
+        "def Guarda_distancias(a, c, d):\n",
+        "    \"\"\"\n",
+        "    Guarda las distancias de wassertein en una lista \n",
+        "    recibe a que es la coleccion 1 \n",
+        "    Parametros: (a,b) -> rango del conjunto [1] , (c,d)-> rango del conjunto [2] \n",
+        "  \n",
+        "    Retorna:\n",
+        "    Una lista con las distancias de wassertein \n",
+        "    \"\"\"\n",
+        "    distancias = []\n",
+        "    # Crear un grupo de procesos\n",
+        "    pool = multiprocessing.Pool()\n",
+        "    # Crear una función parcial con los parámetros a, c y d fijados\n",
+        "    calcular_distancia_partial = partial(calcular_distancia_wasserstein, a, c, d, diagrams)\n",
+        "    # Calcular las distancias de forma paralela\n",
+        "    distancias = pool.map(calcular_distancia_partial, range(c, d))\n",
+        "    # Cerrar el grupo de procesos\n",
+        "    pool.close()\n",
+        "    # Esperar a que todos los procesos terminen\n",
+        "    pool.join()\n",
+        "    return distancias\n"
+      ],
+      "metadata": {
+        "id": "bNPG-MAM11C0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Funcion para obtener distancias y guardarlas en una lista \n",
+        "def Guarda_distancias(a,c,d):\n",
+        "  \"\"\"\n",
+        "  Guarda las distancias de wassertein en una lista \n",
+        "  recibe a que es la coleccion 1 \n",
+        "  Parametros: (a,b) -> rango del conjunto [1] , (c,d)-> rango del conjunto [2] \n",
+        "  \n",
+        "  Retorna:\n",
+        "  Una lista con las distancias de wassertein \n",
+        "  \"\"\"\n",
+        "  #valor que puede cambiar\n",
+        "  a = 1\n",
+        "  distancias = []\n",
+        "  #for i in np.arange(a):\n",
+        "  for j in np.arange(c,d):\n",
+        "      distancias.append(wasserstein_distance1(diagrams[a],diagrams[j]))\n",
+        "  return distancias"
+      ],
+      "metadata": {
+        "id": "Xr8kgpoy1NKD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Generador_de_graficas(lista_de_distancias):\n",
+        "  # Distancias \n",
+        "  plt.plot(lista_de_distancias)\n",
+        "  plt.xlabel('Indidce de distancias')\n",
+        "  plt.ylabel('Distancias de wassertein')\n",
+        "  plt.title('Distancias')\n",
+        "  plt.savefig('grafica.png', dpi=600)\n",
+        "  return plt.show()"
+      ],
+      "metadata": {
+        "id": "FQxwe8niNjEL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def wasserstein_distance1(diag1, diag2):\n",
+        "    \"\"\"\n",
+        "    Calcula la distancia de Wasserstein entre dos diagramas de persistencia.\n",
+        "    Parámetros:\n",
+        "    diag1, diag2: numpy arrays de dimension (n, 2) donde n es el número de puntos en los diagramas.\n",
+        "                  Cada fila representa un punto en el diagrama de persistencia con la primera columna\n",
+        "                  representando la coordenada de nacimiento y la segunda columna la coordenada de muerte.\n",
+        "    Retorna:\n",
+        "    La distancia de Wasserstein entre los dos diagramas de persistencia.\n",
+        "    \"\"\"\n",
+        "    # Crear el objeto Gudhi para calcular la distancia de Wasserstein.\n",
+        "    # Calcular la distancia de Wasserstein.\n",
+        "    dist = gudhi.wasserstein.wasserstein_distance(diag1, diag2)\n",
+        "    return dist"
+      ],
+      "metadata": {
+        "id": "qNL2l7IE4Eh2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Generador_de_graficas2(lista_de_distancias):\n",
+        "  # Distancias \n",
+        "  #plt.plot()\n",
+        "  x = range(len(lista_de_distancias))\n",
+        "  plt.scatter(x,lista_de_distancias)\n",
+        "  plt.xlabel('Indidce de distancias')\n",
+        "  plt.ylabel('Distancias de wassertein')\n",
+        "  plt.title('Distancias')\n",
+        "  plt.savefig('grafica2.png', dpi=1000)\n",
+        "  return plt.show()"
+      ],
+      "metadata": {
+        "id": "kKW0gj0fSW1P"
       },
       "execution_count": null,
       "outputs": []
@@ -128,27 +279,6 @@
       "metadata": {
         "id": "xaDGZMn52NGB"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Usando la libreria giotto"
-      ],
-      "metadata": {
-        "id": "FlXg_Hp4X7vL"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#https://www.bioconductor.org/packages/devel/bioc/vignettes/waddR/inst/doc/wasserstein_metric.html\n",
-        "#https://mtsch.github.io/PersistenceDiagrams.jl/v0.3/generated/distances/"
-      ],
-      "metadata": {
-        "id": "vxwlgUmGFVfy"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -214,8 +344,9 @@
       "cell_type": "code",
       "source": [
         "#Analisis topologico\n",
-        "windows = SlidingWindow(size = 240,stride = 1000)\n",
-        "sample =windows.fit_transform(close_ts)\n",
+        "#stride = 30 , ( d-c = 2500 , 10,000 ) window = 240 minutos , \n",
+        "windows = SlidingWindow(size = 240,stride = 30)\n",
+        "sample = windows.fit_transform(close_ts)\n",
         "sample.shape\n",
         "#Encaje de takens\n",
         "TE = TakensEmbedding(time_delay=1,dimension=2)\n",
@@ -298,101 +429,9 @@
     {
       "cell_type": "code",
       "source": [
-        "def wasserstein_distance1(diag1, diag2):\n",
-        "    \"\"\"\n",
-        "    Calcula la distancia de Wasserstein entre dos diagramas de persistencia.\n",
-        "    Parámetros:\n",
-        "    diag1, diag2: numpy arrays de dimension (n, 2) donde n es el número de puntos en los diagramas.\n",
-        "                  Cada fila representa un punto en el diagrama de persistencia con la primera columna\n",
-        "                  representando la coordenada de nacimiento y la segunda columna la coordenada de muerte.\n",
-        "    Retorna:\n",
-        "    La distancia de Wasserstein entre los dos diagramas de persistencia.\n",
-        "    \"\"\"\n",
-        "    # Crear el objeto Gudhi para calcular la distancia de Wasserstein.\n",
-        "    # Calcular la distancia de Wasserstein.\n",
-        "    dist = gudhi.wasserstein.wasserstein_distance(diag1, diag2)\n",
-        "    return dist"
-      ],
-      "metadata": {
-        "id": "qNL2l7IE4Eh2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Funcion para obtener distancias y guardarlas en una lista \n",
-        "def Guarda_distancias(a,c,d):\n",
-        "  \"\"\"\n",
-        "  Guarda las distancias de wassertein en una lista \n",
-        "  recibe a que es la coleccion 1 \n",
-        "  Parametros: (a,b) -> rango del conjunto [1] , (c,d)-> rango del conjunto [2] \n",
-        "  \n",
-        "  Retorna:\n",
-        "  Una lista con las distancias de wassertein \n",
-        "  \"\"\"\n",
-        "  #valor que puede cambiar\n",
-        "  a = 1\n",
-        "  distancias = []\n",
-        "  #for i in np.arange(a):\n",
-        "  for j in np.arange(c,d):\n",
-        "      distancias.append(wasserstein_distance1(diagrams[a],diagrams[j]))\n",
-        "  return distancias"
-      ],
-      "metadata": {
-        "id": "Xr8kgpoy1NKD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def Generador_de_graficas(lista_de_distancias):\n",
-        "  # Distancias \n",
-        "  plt.plot(lista_de_distancias)\n",
-        "  plt.xlabel('Indidce de distancias')\n",
-        "  plt.ylabel('Distancias de wassertein')\n",
-        "  plt.title('Distancias')\n",
-        "  plt.savefig('grafica.png', dpi=600)\n",
-        "  return plt.show()"
-      ],
-      "metadata": {
-        "id": "FQxwe8niNjEL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def Generador_de_graficas2(lista_de_distancias):\n",
-        "  # Distancias \n",
-        "  #plt.plot()\n",
-        "  x = range(len(lista_de_distancias))\n",
-        "  plt.scatter(x,lista_de_distancias)\n",
-        "  plt.xlabel('Indidce de distancias')\n",
-        "  plt.ylabel('Distancias de wassertein')\n",
-        "  plt.title('Distancias')\n",
-        "  plt.savefig('grafica2.png', dpi=1000)\n",
-        "  return plt.show()"
-      ],
-      "metadata": {
-        "id": "kKW0gj0fSW1P"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "lista_de_distancias = Guarda_distancias(4,30,254)\n",
-        "\n",
         "Generador_de_graficas(lista_de_distancias)\n",
-        "\n",
-        "Generador_de_graficas2(lista_de_distancias)\n",
-        "\n"
+        "Generador_de_graficas2(lista_de_distancias)"
       ],
       "metadata": {
         "id": "uic7R-lgD2Ol",
@@ -459,26 +498,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "metadata": {
-        "id": "02TZBeAKfqml"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "G4IQyTyVfqsw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Haciendo la prediccion "
@@ -492,15 +511,6 @@
       "source": [],
       "metadata": {
         "id": "E_0k9y3uKmg-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rhOvXEdGmjlg"
       },
       "execution_count": null,
       "outputs": []
