Agregamos funcion para crear lista en paralelo , funcion para encontrar el minimo y el indice del minimo

--- a/TDASeriesdetiempo.ipynb
+++ b/TDASeriesdetiempo.ipynb
@@ -101,6 +101,26 @@
     {
       "cell_type": "code",
       "source": [
+        "def encontrar_minimo_global(distancias):\n",
+        "    minimo = min(distancias)\n",
+        "    indice_minimo = distancias.index(minimo)\n",
+        "    return minimo, indice_minimo\n",
+        "\n",
+        "# Ejemplo de uso\n",
+        "distancias = [5, 2, 8, 1, 10, 4]\n",
+        "minimo_global, indice_minimo = encontrar_minimo_global(distancias)\n",
+        "print(\"Valor mínimo:\", minimo_global)\n",
+        "print(\"Índice del mínimo:\", indice_minimo)\n"
+      ],
+      "metadata": {
+        "id": "xVscQ9bPBVnZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def calcular_distancia_wasserstein(a, c, d, diagrams, i):\n",
         "    return wasserstein_distance1(diagrams[a], diagrams[i])\n",
         "\n",
@@ -481,8 +501,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "stride = 30 , ( d-c = 2500 , 10,000 )\n",
-        "window = 240 minutos , Teorema de estabilidad en el ocotillo, aunque seria bueno primero en mi maquina \n"
+        "* stride = 30 , ( d-c = 2500 , 10,000 )\n",
+        "window = 240 minutos , Teorema de estabilidad en el ocotillo, aunque seria bueno primero en mi maquina \n",
+        "\n",
+        "* "
       ],
       "metadata": {
         "id": "AaNpDfdsgxP5"
